--- a/assets/main.css
+++ b/assets/main.css
@@ -1,1 +1,9 @@
 /* Put your CSS here! */
+
+body {
+  background: #ffeebb;
+  margin: 75px;
+  font-size: 20px;
+  text-transform: lowercase;
+  font-family: "Space Mono", "Courier New", Courier, monospace;
+}
