--- a/assets/main.css
+++ b/assets/main.css
@@ -3,7 +3,7 @@
 body {
   background: #ffeebb;
   margin: 75px;
-  font-size: 20px;
+  font-size: 1em;
   text-transform: lowercase;
   font-family: "Space Mono", "Courier New", Courier, monospace;
 }
