--- a/assets/main.css
+++ b/assets/main.css
@@ -1,8 +1,8 @@
 /* Put your CSS here! */
 
 body {
-  background: #ffeebb;
-  margin: 75px;
+  background: #dddddd;
+  margin: 3em;
   font-size: 1em;
   text-transform: lowercase;
   font-family: "Space Mono", "Courier New", Courier, monospace;
